# futura_MT3620

./: README.md
Futura_samples/: Futura Azure Sphere ADC.json  Futura Azure Sphere GPIO.json  Futura Azure Sphere MPU6050.json  Futura Azure Sphere RTA.json  Futura Azure Sphere UART.json  Futura Azure Sphere v2.json
Futura_samples/Futura_MT3620_ADC_IoT_Central/: CMakeLists.txt  app_manifest.json  main.c
Futura_samples/Futura_MT3620_DHT22_IoT_Central/: CMakeLists.txt  app_manifest.json  main.c
Futura_samples/Futura_MT3620_DHT22_IoT_Central/DHTlib/: DHTlib.c
Futura_samples/Futura_MT3620_GPIO_IoT_Central/: CMakeLists.txt  app_manifest.json  azure_iot_utilities.c  device_twin.c  main.c
Futura_samples/Futura_MT3620_HelloWorld/: CMakeLists.txt  app_manifest.json  main.c
Futura_samples/Futura_MT3620_MPU6050_IoT_Central/: CMakeLists.txt  app_manifest.json  main.c
Futura_samples/Futura_MT3620_RFID_IoT_Central/: CMakeLists.txt  CMakeSettings.json  app_manifest.json  main.c  map.c  map.h  mfrc522.c  mfrc522.h  mfrc522_cmd.h  mfrc522_reg.h  require_cpp11.h
Futura_samples/Futura_MT3620_RX_UART_IoT_Central/: CMakeLists.txt  app_manifest.json  main.c
Futura_samples/Futura_MT3620_inter-core_IoT_Central/: README.md  intercore.code-workspace  launch.vs.json
Futura_samples/Futura_MT3620_inter-core_IoT_Central/Intercore_HighLevelApp/: CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  eventloop_timer_utilities.c  launch.vs.json  main.c
Futura_samples/Futura_MT3620_inter-core_IoT_Central/Intercore_RTApp/: CMakeLists.txt  CMakeSettings.json  README.md  app_manifest.json  launch.vs.json  linker.ld  logical-dpc.c  logical-dpc.h  logical-intercore.c  logical-intercore.h  main.c  mt3620-baremetal.h  mt3620-intercore.c  mt3620-intercore.h  mt3620-timer.c  mt3620-timer.h  mt3620-uart-poll.c  mt3620-uart-poll.h
Futura_samples/Hardware/futura_mt3620/inc/hw/: sample_hardware.h
Hardware/futura_mt3620/: sample_hardware.json
